# snoopy

./: README.md  bash_snoopy.sh  install_snoopy.sh  pyproject.toml  pythonLicenses.csv  readme.html  snoopy  snoopy.ipynb  snoopy.py
code/: snoopy.py  snoopy_cpp.cpp
snoopy_deps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
