[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snoopy-deps"
version = "0.1.0"
description = "Python & C/C++ dependency analyzer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["nbformat"]

[tool.setuptools]
py-modules = ["snoopy"]

[project.scripts]
snoopy = "snoopy:main"
